--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "bugs": "https://github.com/Anamico/node-red-contrib-battle.net/issues",
   "dependencies": {
     "async": "^2.6.1",
+    "cheerio": "^1.0.0-rc.3",
     "request": "^2.88.0"
   },
   "keywords": [
