--- a/package.json
+++ b/package.json
@@ -36,11 +36,25 @@
   },
   "keywords": [
     "battle.net",
-    "parental controls",
-    "parent controls",
+    "allow2",
+    "node-red",
     "control",
-    "controls",
-    "allow2"
+    "children",
+    "freedom",
+    "control",
+    "quota",
+    "parental-control",
+    "parental",
+    "parent",
+    "family",
+    "social",
+    "social-network",
+    "gaming",
+    "time",
+    "limit",
+    "limits",
+    "time-limit",
+    "automation"
   ],
   "maintainers": [
     {
